--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,262 +2,5 @@
 @import "reset";
 @import "variables";
 @import "mixins";
-
-// Hela sidan
-html {
-    font-family: 'Acme', sans-serif;
-}
-html, body {
-    height:100%;
-}
-body {
-    background-color: $darkGray;
-    color:black;
-    max-width:1920px;
-}
-// Gula element med mörkgrå text
-%yellowDarkgray {
-    color:$darkGray!important;
-    background-color:$yellow;
-}
-// Standardutseende för sidinnehålls-elementen
-%standardLayout {
-    background-color:$lightGray;
-    border-radius:5px;
-}
-
-//Huvudmenyn
-#mainheader {
-    height:50px;
-    background-color:$darkGray;
-    h2 {
-        float:left;
-        line-height:50px;
-        margin-left:25px;
-        color:$lightGray;
-        font-size:30px;
-        font-family: 'Fontdiner Swanky', cursive;
-    }
-    #main-nav {
-        float:right;
-        a {
-            font-family: 'Lalezar', cursive;
-            text-decoration:none;
-            color:$lightGray;
-            font-size:20px;
-            padding:10px 20px;
-            line-height:50px;
-            // & Används för att stylea pseudo-klasser
-            &:hover {
-                @extend %yellowDarkgray;
-                background-color:lighten($yellow, 15);                
-            }
-        }
-    }
-    ul li {
-      float:left;
-      display:block;
-    }
-
-}
-// Aktuell sida
-.active {
-    @extend %yellowDarkgray;
-} 
-
-// Gul rand som flyter ihop med aktuell sida
-#second-header {
-    height:5px;
-    background-color:$yellow;
-}
-
-//Banner med bild och text
-#banner {
-    height:500px;
-    position:relative;
-    z-index:1;
-    margin-bottom:2%;
-    h1 {
-        position:absolute;
-        top:50%;
-        right:100px;
-        font-size:50px;
-        padding:25px;
-        background-color:$lightGray;
-        color:$darkGray;
-        font-family: 'Lalezar', cursive;
-        border-radius:5px;
-    }
-    img {
-        width:100%;
-        height:100%;
-    }
-}
-
-// Sidinnehåll
-#container {
-    min-height:100%;
-    max-width:960px;
-    margin:0 auto;
-}
-#main {
-    overflow:auto;
-    padding-bottom:100px;
-    margin:0 2%;
-}
-
-// Stora textfältet
-#main-text {
-    @extend %standardLayout;
-    padding:10%;
-    margin-bottom:2%;
-    h2 {
-        font-size:30px;
-        font-family: 'Lalezar', cursive;
-    }
-}
-
-// Produkter och tjänster
-.service {
-    @extend %standardLayout;
-    @include gridBuilder(4, 2%);
-    min-height:200px;
-    &:hover {
-        background-color:darken($lightGray, 7.5);
-    }
-    h3 {
-        text-align:center;
-        padding:5% 0;
-        font-size:22px;
-        font-family: 'Lalezar', cursive;
-    }
-}
-
-// Reklam-elementen
-.commercial {
-    @include gridBuilder(2, 2%);
-    img {
-        width:100%;
-    }
-}
-
-// Sidfoten
-footer {
-    @extend %yellowDarkgray;
-    position:relative;
-    height:100px;
-    margin-top:-100px;
-}
-
-// Innehållet i sidfoten
-.footer-content {
-    max-width:960px;
-    margin:0 auto;
-    padding:25px;
-}
-
-// Döljer mobilikonen
-#mobiler-container {
-    display:none;
-}
-#mobile-menu {
-    display:none;
-}
-
-// Media queries
-@media screen and (max-width:750px) {
-    // Designar mobilmenyn
-    #main-nav {
-        z-index:999;
-        position:relative;
-        float:none;
-        width:100%;
-        a {
-            padding:5px;
-            text-align:left;
-            width:100%;
-            display:block;
-            line-height:0;
-        }
-        ul {
-            display:none;
-            
-         }
-        ul li {
-            float:none;
-            width:100%;
-            display:block;
-            background-color:$darkGray;
-            z-index:99999;
-          }
-    }
-    // Visar menyn då den har klassen open (via klick)
-    #main-nav ul.open {
-        display:block;
-    }
-    #mobile-container{
-        position: relative;
-        width: 40px;
-        float:right;
-        margin:12.5px;
-    }
-    #mobile-menu{
-        cursor: pointer;
-        display: block;
-    }
-    // De tre strecken som bygger upp mobilmenyn
-    #mobile-menu span{
-        background: $lightGray;
-        display: block;
-        width: 40px;
-        height: 5px;
-        margin-bottom: 5px;
-        position: relative;
-        top: 0;
-        transition: all ease-in-out 0.2s;
-        border-radius:5px;
-    }
-    // Mittenstrecket försvinner vid klick
-    #mobile-menu.open span:nth-child(2){
-        width: 0;
-        opacity: 0;
-    }
-    // Det understa strecket roterar och bildar ett halvt kryss
-    #mobile-menu.open span:nth-child(3){
-        transform: rotate(45deg);
-        top: -10px;
-    }
-    // Det översta strecket roterar och bildar ett halvt krytt
-    #mobile-menu.open span:nth-child(1){
-        transform: rotate(-45deg);
-        top: 10px;
-    }
-    //Banner med bild och text
-#banner {
-    height:300px;
-    h1 {
-       position:absolute;
-        top:50%;
-        right:100px;
-        font-size:30px;
-        padding:25px;
-    }
-}
-    // Ändrar utseendet på produkter & tjänster
-    .service {
-        @include gridBuilder(2, 2%);
-        h3 {
-            padding:5% 0;
-            font-size:22px;
-        }
-    }
-    // Ändrar utseendet på reklam-elementen
-    .commercial {
-       @include gridBuilder(1, 2%);
-        h3 {
-            padding:5% 0;
-            font-size:22px;
-        }
-    }
-
-}
+@import "components";
+@import "layout";
